# linux-shorts

./: CMakeLists.txt  README.md  main.cpp
src/envs/: envs.cpp  printenv.cpp
src/filesystem/: copy_hosts.cpp  fopen.cpp  read.cpp  wirte.cpp
src/logs/: perror.cpp
src/mallocs/: malloc.cpp
src/options/: getlongopt.cpp  getopt.cpp
src/pthreads/: parralle-2.cpp  parralle-cancel.cpp  parralle-mutex.cpp  parralle-sem.cpp  point_start_start.cpp  pthread.cpp
src/resources/: limits.cpp
src/select/: select-for-socket.txt  wait-std-in.cpp
src/sockets/: client-002.cpp  client.cpp  server-002.cpp  server-003.cpp  server-client.py  server-socket.py
src/terminal/: argcv.cpp
src/times/: gettimeofday.cpp  gmtime.cpp  localtime.cpp  time.cpp  timezone.cpp
src/tmpfile/: tmpnam.cpp
src/uid/: uid.cpp
