cmake_minimum_required(VERSION 3.0.0)
project(linux-shorts VERSION 0.1.0)

include(CTest)
enable_testing()


add_executable(linux-shorts main.cpp)
add_executable(linux-shorts-pthreads-paralle-mutex src/pthreads/parralle-mutex.cpp)
add_executable(linux-shorts-pthreads-paralle-sem src/pthreads/parralle-sem.cpp)
add_executable(linux-shorts-pthreads-paralle2 src/pthreads/parralle-2.cpp)
add_executable(linux-shorts-pthreads-point_start_start src/pthreads/point_start_start.cpp)
add_executable(linux-shorts-pthreads-pthread src/pthreads/pthread.cpp)
add_executable(linux-shorts-mallocs-malloc src/mallocs/malloc.cpp)
add_executable(linux-shorts-logs-perror src/logs/perror.cpp)
add_executable(linux-shorts-resources-limits src/resources/limits.cpp)
add_executable(linux-shorts-uid src/uid/uid.cpp)
add_executable(linux-shorts-times-timeofday src/times/gettimeofday.cpp)
add_executable(linux-shorts-times-timezone src/times/timezone.cpp)
add_executable(linux-shorts-times-tmpfile src/tmpfile/tmpnam.cpp)
add_executable(linux-shorts-times-localtime src/times/localtime.cpp)
add_executable(linux-shorts-times-gmtime src/times/gmtime.cpp)
add_executable(linux-shorts-times src/times/time.cpp)
add_executable(linux-shorts-printevn src/envs/printenv.cpp)
add_executable(linux-shorts-envs src/envs/envs.cpp)
add_executable(linux-shorts-fs-write src/filesystem/wirte.cpp)
add_executable(linux-shorts-fs-read src/filesystem/read.cpp)
add_executable(linux-shorts-fs-copy-host src/filesystem/copy_hosts.cpp)
add_executable(linux-shorts-fopen src/filesystem/fopen.cpp)
add_executable(linux-shorts-getopt src/options/getopt.cpp)
add_executable(linux-shorts-getoptlong src/options/getlongopt.cpp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
